# Cinolib

./: .gitignore  CMakeLists.txt  README.md  bunny.mesh  bunny.off  cinolib-config.cmake
app/: CMakeLists.txt  check_mesh.cpp  connected_components.cpp  export_surface.cpp  find_intersections.cpp  geodesic.cpp  harmonic_map.cpp  homotopy_basis.cpp  lscm.cpp  mesh_convert.cpp  normalize.cpp  octree.cpp  poisson_sampling.cpp  sphere_mapping.cpp  sphere_sampling.cpp  tetrahedralize.cpp  voxelize.cpp
docs/: UserGuide.md
examples/: CMakeLists.txt
examples/01_trimesh_viewer/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
examples/02_quadmesh_viewer/: main.cpp
examples/03_polygonmesh_viewer/: main.cpp
examples/04_tetmesh_viewer/: main.cpp
examples/05_hexmesh_viewer/: main.cpp
examples/06_polyhedralmesh_viewer/: main.cpp
examples/07_texture_loading/: main.cpp
examples/08_picking/: main.cpp
examples/09_polyharmonic_functions_srf/: main.cpp
examples/10_polyharmonic_functions_vol/: main.cpp
examples/11_sphere_mapping/: main.cpp
examples/12_polygon_mesh_generation/: main.cpp
examples/13_polyhedral_mesh_generation/: main.cpp
examples/14_heat_geodesics/: main.cpp
examples/15_polygon_measures/: main.cpp
examples/16_sphere_sampling/: main.cpp
examples/17_iso_contours/: main.cpp
examples/18_iso_surfaces/: main.cpp
examples/19_harmonic_map/: main.cpp
examples/20_coarse_quad_layouts/: main.cpp
examples/21_coarse_hex_layouts/: main.cpp
examples/22_remesher/: main.cpp
examples/23_sharp_creases/: main.cpp
examples/24_sliced_CLI_loader/: main.cpp
examples/25_surface_painter/: main.cpp
examples/26_export_surface/: main.cpp
examples/27_import_surface/: main.cpp
examples/28_tetrahedralize/: main.cpp
examples/29_ambient_occlusion/: main.cpp
examples/31_LSCM/: main.cpp
examples/32_homotopy_basis/: main.cpp
examples/33_edge_collapse/: main.cpp
examples/34_Hermite_RBF/: main.cpp
examples/35_Poisson_sampling/: main.cpp
examples/36_canonical_polygonal_schema/: main.cpp
examples/37_find_intersections/: main.cpp
examples/38_octree/: main.cpp
examples/39_normalize_and_center/: main.cpp
examples/40_ARAP_UVmap/: main.cpp
examples/41_ARAP_deformation/: main.cpp
examples/42_connected_components/: main.cpp
examples/43_hex2tet/: main.cpp
examples/44_voxelize_mesh/: main.cpp
examples/45_voxelize_function/: main.cpp
examples/46_eigenfunctions/: main.cpp
examples/47_AFM/: main.cpp
examples/48_SE/: main.cpp
examples/data/: ellipsoid_tet.mesh
include/cinolib/: subdivision_schemas.h
scripts/: generate_nogui_tests.py
tests/: CMakeLists.txt  test_harmonic_map.cpp
tests/nogui/: test_01_trimesh_viewer.cpp  test_02_quadmesh_viewer.cpp  test_03_polygonmesh_viewer.cpp  test_04_tetmesh_viewer.cpp  test_05_hexmesh_viewer.cpp  test_06_polyhedralmesh_viewer.cpp  test_07_texture_loading.cpp  test_08_picking.cpp  test_09_polyharmonic_functions_srf.cpp  test_10_polyharmonic_functions_vol.cpp  test_11_sphere_mapping.cpp  test_12_polygon_mesh_generation.cpp  test_13_polyhedral_mesh_generation.cpp  test_14_heat_geodesics.cpp  test_15_polygon_measures.cpp  test_16_sphere_sampling.cpp  test_17_iso_contours.cpp  test_18_iso_surfaces.cpp  test_19_harmonic_map.cpp  test_20_coarse_quad_layouts.cpp  test_21_coarse_hex_layouts.cpp  test_22_remesher.cpp  test_23_sharp_creases.cpp  test_24_sliced_CLI_loader.cpp  test_25_surface_painter.cpp  test_26_export_surface.cpp  test_27_import_surface.cpp  test_28_tetrahedralize.cpp  test_29_ambient_occlusion.cpp  test_30_mesh_format_converter.cpp  test_31_LSCM.cpp  test_32_homotopy_basis.cpp  test_33_edge_collapse.cpp  test_34_Hermite_RBF.cpp  test_35_Poisson_sampling.cpp  test_36_canonical_polygonal_schema.cpp  test_37_find_intersections.cpp  test_38_octree.cpp  test_39_normalize_and_center.cpp  test_40_ARAP_UVmap.cpp  (+8 more)
