cmake_minimum_required(VERSION 3.10)

project(app)

if(NOT TARGET cinolib)
    set(cinolib_DIR "${PROJECT_SOURCE_DIR}/..")
    find_package(cinolib REQUIRED)
endif()
link_libraries(cinolib)

make_directory(${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

add_executable(mesh_convert mesh_convert.cpp)
add_executable(export_surface export_surface.cpp)
add_executable(tetrahedralize tetrahedralize.cpp)
add_executable(geodesic geodesic.cpp)
add_executable(lscm lscm.cpp)
add_executable(voxelize voxelize.cpp)
add_executable(octree octree.cpp)
add_executable(connected_components connected_components.cpp)
add_executable(normalize normalize.cpp)
add_executable(sphere_mapping sphere_mapping.cpp)
add_executable(homotopy_basis homotopy_basis.cpp)
add_executable(sphere_sampling sphere_sampling.cpp)
add_executable(harmonic_map harmonic_map.cpp)
add_executable(find_intersections find_intersections.cpp)
add_executable(poisson_sampling poisson_sampling.cpp)
add_executable(check_mesh check_mesh.cpp)