enable_testing()
add_compile_definitions(DATA_PATH="${CMAKE_SOURCE_DIR}/examples/data")
add_executable(test_01_trimesh_viewer nogui/test_01_trimesh_viewer.cpp)
target_link_libraries(test_01_trimesh_viewer cinolib)
add_test(NAME test_01_trimesh_viewer COMMAND test_01_trimesh_viewer "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_02_quadmesh_viewer nogui/test_02_quadmesh_viewer.cpp)
target_link_libraries(test_02_quadmesh_viewer cinolib)
add_test(NAME test_02_quadmesh_viewer COMMAND test_02_quadmesh_viewer "${CMAKE_SOURCE_DIR}/examples/data/cubespikes.obj")
add_executable(test_03_polygonmesh_viewer nogui/test_03_polygonmesh_viewer.cpp)
target_link_libraries(test_03_polygonmesh_viewer cinolib)
add_test(NAME test_03_polygonmesh_viewer COMMAND test_03_polygonmesh_viewer "${CMAKE_SOURCE_DIR}/examples/data/lion_vase_poly.off")
add_executable(test_04_tetmesh_viewer nogui/test_04_tetmesh_viewer.cpp)
target_link_libraries(test_04_tetmesh_viewer cinolib)
add_test(NAME test_04_tetmesh_viewer COMMAND test_04_tetmesh_viewer "${CMAKE_SOURCE_DIR}/examples/data/sphere.mesh")
add_executable(test_05_hexmesh_viewer nogui/test_05_hexmesh_viewer.cpp)
target_link_libraries(test_05_hexmesh_viewer cinolib)
add_test(NAME test_05_hexmesh_viewer COMMAND test_05_hexmesh_viewer "${CMAKE_SOURCE_DIR}/examples/data/rockerarm.mesh")
add_executable(test_06_polyhedralmesh_viewer nogui/test_06_polyhedralmesh_viewer.cpp)
target_link_libraries(test_06_polyhedralmesh_viewer cinolib)
add_test(NAME test_06_polyhedralmesh_viewer COMMAND test_06_polyhedralmesh_viewer "${CMAKE_SOURCE_DIR}/examples/data/eight_voronoi.hedra")
add_executable(test_07_texture_loading nogui/test_07_texture_loading.cpp)
target_link_libraries(test_07_texture_loading cinolib)
add_test(NAME test_07_texture_loading COMMAND test_07_texture_loading "${CMAKE_SOURCE_DIR}/examples/data/blub_triangulated.obj")
add_executable(test_08_picking nogui/test_08_picking.cpp)
target_link_libraries(test_08_picking cinolib)
add_test(NAME test_08_picking COMMAND test_08_picking "${CMAKE_SOURCE_DIR}/examples/data/maxFace.obj")
add_executable(test_09_polyharmonic_functions_srf nogui/test_09_polyharmonic_functions_srf.cpp)
target_link_libraries(test_09_polyharmonic_functions_srf cinolib)
add_test(NAME test_09_polyharmonic_functions_srf COMMAND test_09_polyharmonic_functions_srf "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_10_polyharmonic_functions_vol nogui/test_10_polyharmonic_functions_vol.cpp)
target_link_libraries(test_10_polyharmonic_functions_vol cinolib)
add_test(NAME test_10_polyharmonic_functions_vol COMMAND test_10_polyharmonic_functions_vol "${CMAKE_SOURCE_DIR}/examples/data/sphere.mesh")
add_executable(test_11_sphere_mapping nogui/test_11_sphere_mapping.cpp)
target_link_libraries(test_11_sphere_mapping cinolib)
add_test(NAME test_11_sphere_mapping COMMAND test_11_sphere_mapping "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_12_polygon_mesh_generation nogui/test_12_polygon_mesh_generation.cpp)
target_link_libraries(test_12_polygon_mesh_generation cinolib)
add_test(NAME test_12_polygon_mesh_generation COMMAND test_12_polygon_mesh_generation "${CMAKE_SOURCE_DIR}/examples/data/E.obj")
add_executable(test_13_polyhedral_mesh_generation nogui/test_13_polyhedral_mesh_generation.cpp)
target_link_libraries(test_13_polyhedral_mesh_generation cinolib)
add_test(NAME test_13_polyhedral_mesh_generation COMMAND test_13_polyhedral_mesh_generation "${CMAKE_SOURCE_DIR}/examples/data/3holes.obj")
add_executable(test_14_heat_geodesics nogui/test_14_heat_geodesics.cpp)
target_link_libraries(test_14_heat_geodesics cinolib)
add_test(NAME test_14_heat_geodesics COMMAND test_14_heat_geodesics "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_15_polygon_measures nogui/test_15_polygon_measures.cpp)
target_link_libraries(test_15_polygon_measures cinolib)
add_test(NAME test_15_polygon_measures COMMAND test_15_polygon_measures "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_16_sphere_sampling nogui/test_16_sphere_sampling.cpp)
target_link_libraries(test_16_sphere_sampling cinolib)
add_test(NAME test_16_sphere_sampling COMMAND test_16_sphere_sampling "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_17_iso_contours nogui/test_17_iso_contours.cpp)
target_link_libraries(test_17_iso_contours cinolib)
add_test(NAME test_17_iso_contours COMMAND test_17_iso_contours "${CMAKE_SOURCE_DIR}/examples/data/circle.obj")
add_executable(test_18_iso_surfaces nogui/test_18_iso_surfaces.cpp)
target_link_libraries(test_18_iso_surfaces cinolib)
add_test(NAME test_18_iso_surfaces COMMAND test_18_iso_surfaces "${CMAKE_SOURCE_DIR}/examples/data/sphere.mesh")
add_executable(test_19_harmonic_map nogui/test_19_harmonic_map.cpp)
target_link_libraries(test_19_harmonic_map cinolib)
add_test(NAME test_19_harmonic_map COMMAND test_19_harmonic_map "${CMAKE_SOURCE_DIR}/examples/data/Laurana.obj")
add_executable(test_20_coarse_quad_layouts nogui/test_20_coarse_quad_layouts.cpp)
target_link_libraries(test_20_coarse_quad_layouts cinolib)
add_test(NAME test_20_coarse_quad_layouts COMMAND test_20_coarse_quad_layouts "${CMAKE_SOURCE_DIR}/examples/data/cubespikes.obj")
add_executable(test_21_coarse_hex_layouts nogui/test_21_coarse_hex_layouts.cpp)
target_link_libraries(test_21_coarse_hex_layouts cinolib)
add_test(NAME test_21_coarse_hex_layouts COMMAND test_21_coarse_hex_layouts "${CMAKE_SOURCE_DIR}/examples/data/ellipsoid.mesh")
add_executable(test_22_remesher nogui/test_22_remesher.cpp)
target_link_libraries(test_22_remesher cinolib)
add_test(NAME test_22_remesher COMMAND test_22_remesher "${CMAKE_SOURCE_DIR}/examples/data/pyramid.off")
add_executable(test_23_sharp_creases nogui/test_23_sharp_creases.cpp)
target_link_libraries(test_23_sharp_creases cinolib)
add_test(NAME test_23_sharp_creases COMMAND test_23_sharp_creases "${CMAKE_SOURCE_DIR}/examples/data/cube_minus_sphere.obj")
add_executable(test_24_sliced_CLI_loader nogui/test_24_sliced_CLI_loader.cpp)
target_link_libraries(test_24_sliced_CLI_loader cinolib)
add_test(NAME test_24_sliced_CLI_loader COMMAND test_24_sliced_CLI_loader "${CMAKE_SOURCE_DIR}/examples/data/T_supported.cli")
add_executable(test_25_surface_painter nogui/test_25_surface_painter.cpp)
target_link_libraries(test_25_surface_painter cinolib)
add_test(NAME test_25_surface_painter COMMAND test_25_surface_painter "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_26_export_surface nogui/test_26_export_surface.cpp)
target_link_libraries(test_26_export_surface cinolib)
add_test(NAME test_26_export_surface COMMAND test_26_export_surface "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_27_import_surface nogui/test_27_import_surface.cpp)
target_link_libraries(test_27_import_surface cinolib)
add_test(NAME test_27_import_surface COMMAND test_27_import_surface "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_28_tetrahedralize nogui/test_28_tetrahedralize.cpp)
target_link_libraries(test_28_tetrahedralize cinolib)
add_test(NAME test_28_tetrahedralize COMMAND test_28_tetrahedralize "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_29_ambient_occlusion nogui/test_29_ambient_occlusion.cpp)
target_link_libraries(test_29_ambient_occlusion cinolib)
add_test(NAME test_29_ambient_occlusion COMMAND test_29_ambient_occlusion "${CMAKE_SOURCE_DIR}/examples/data/bamboo_pen.obj")
add_executable(test_30_mesh_format_converter nogui/test_30_mesh_format_converter.cpp)
target_link_libraries(test_30_mesh_format_converter cinolib)
add_test(NAME test_30_mesh_format_converter COMMAND test_30_mesh_format_converter "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_31_LSCM nogui/test_31_LSCM.cpp)
target_link_libraries(test_31_LSCM cinolib)
add_test(NAME test_31_LSCM COMMAND test_31_LSCM "${CMAKE_SOURCE_DIR}/examples/data/maxFace.obj")
add_executable(test_32_homotopy_basis nogui/test_32_homotopy_basis.cpp)
target_link_libraries(test_32_homotopy_basis cinolib)
add_test(NAME test_32_homotopy_basis COMMAND test_32_homotopy_basis "${CMAKE_SOURCE_DIR}/examples/data/torus.obj")
add_executable(test_33_edge_collapse nogui/test_33_edge_collapse.cpp)
target_link_libraries(test_33_edge_collapse cinolib)
add_test(NAME test_33_edge_collapse COMMAND test_33_edge_collapse "${CMAKE_SOURCE_DIR}/examples/data/circle.obj")
add_executable(test_34_Hermite_RBF nogui/test_34_Hermite_RBF.cpp)
target_link_libraries(test_34_Hermite_RBF cinolib)
add_test(NAME test_34_Hermite_RBF COMMAND test_34_Hermite_RBF "${CMAKE_SOURCE_DIR}/examples/data/sphere_coarse.obj")
add_executable(test_35_Poisson_sampling nogui/test_35_Poisson_sampling.cpp)
target_link_libraries(test_35_Poisson_sampling cinolib)
add_test(NAME test_35_Poisson_sampling COMMAND test_35_Poisson_sampling "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_36_canonical_polygonal_schema nogui/test_36_canonical_polygonal_schema.cpp)
target_link_libraries(test_36_canonical_polygonal_schema cinolib)
add_test(NAME test_36_canonical_polygonal_schema COMMAND test_36_canonical_polygonal_schema "${CMAKE_SOURCE_DIR}/examples/data/torus.obj")
add_executable(test_37_find_intersections nogui/test_37_find_intersections.cpp)
target_link_libraries(test_37_find_intersections cinolib)
add_test(NAME test_37_find_intersections COMMAND test_37_find_intersections "${CMAKE_SOURCE_DIR}/examples/data/two_spheres.obj")
add_executable(test_38_octree nogui/test_38_octree.cpp)
target_link_libraries(test_38_octree cinolib)
add_test(NAME test_38_octree COMMAND test_38_octree "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_39_normalize_and_center nogui/test_39_normalize_and_center.cpp)
target_link_libraries(test_39_normalize_and_center cinolib)
add_test(NAME test_39_normalize_and_center COMMAND test_39_normalize_and_center "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_40_ARAP_UVmap nogui/test_40_ARAP_UVmap.cpp)
target_link_libraries(test_40_ARAP_UVmap cinolib)
add_test(NAME test_40_ARAP_UVmap COMMAND test_40_ARAP_UVmap "${CMAKE_SOURCE_DIR}/examples/data/maxFace.obj")
add_executable(test_41_ARAP_deformation nogui/test_41_ARAP_deformation.cpp)
target_link_libraries(test_41_ARAP_deformation cinolib)
add_test(NAME test_41_ARAP_deformation COMMAND test_41_ARAP_deformation "${CMAKE_SOURCE_DIR}/examples/data/cactus.off")
add_executable(test_42_connected_components nogui/test_42_connected_components.cpp)
target_link_libraries(test_42_connected_components cinolib)
add_test(NAME test_42_connected_components COMMAND test_42_connected_components "${CMAKE_SOURCE_DIR}/examples/data/Gravgen.obj")
add_executable(test_43_hex2tet nogui/test_43_hex2tet.cpp)
target_link_libraries(test_43_hex2tet cinolib)
add_test(NAME test_43_hex2tet COMMAND test_43_hex2tet "${CMAKE_SOURCE_DIR}/examples/data/ellipsoid.mesh")
add_executable(test_44_voxelize_mesh nogui/test_44_voxelize_mesh.cpp)
target_link_libraries(test_44_voxelize_mesh cinolib)
add_test(NAME test_44_voxelize_mesh COMMAND test_44_voxelize_mesh "${CMAKE_SOURCE_DIR}/examples/data/lion_vase_poly.off")
add_executable(test_45_voxelize_function nogui/test_45_voxelize_function.cpp)
target_link_libraries(test_45_voxelize_function cinolib)
add_test(NAME test_45_voxelize_function COMMAND test_45_voxelize_function "${CMAKE_SOURCE_DIR}/examples/data/bunny.obj")
add_executable(test_46_eigenfunctions nogui/test_46_eigenfunctions.cpp)
target_link_libraries(test_46_eigenfunctions cinolib)
add_test(NAME test_46_eigenfunctions COMMAND test_46_eigenfunctions "${CMAKE_SOURCE_DIR}/examples/data/humanoid.off")
add_executable(test_47_AFM nogui/test_47_AFM.cpp)
target_link_libraries(test_47_AFM cinolib)
add_test(NAME test_47_AFM COMMAND test_47_AFM "${CMAKE_SOURCE_DIR}/examples/data/hele_shaw.obj")
add_executable(test_48_SE nogui/test_48_SE.cpp)
target_link_libraries(test_48_SE cinolib)
add_test(NAME test_48_SE COMMAND test_48_SE "${CMAKE_SOURCE_DIR}/examples/data/hele_shaw.obj")
add_executable(test_harmonic_map test_harmonic_map.cpp)
target_link_libraries(test_harmonic_map cinolib)
add_test(NAME test_harmonic_map COMMAND test_harmonic_map "${CMAKE_SOURCE_DIR}/examples/data/Laurana.obj")